Fix table names and schemas

--- a/apps/app-k-maps/src/app/core/menu/app-menu.component.html
+++ b/apps/app-k-maps/src/app/core/menu/app-menu.component.html
@@ -65,7 +65,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="true">
-          <ion-item routerLink="/discourse/concepts" routerDirection="root" detail="false">
+          <ion-item routerLink="/discourse/wv_concepts" routerDirection="root" detail="false">
             <ion-icon name="pricetags-outline" slot="start" class="menu-icon"></ion-icon>
             <ion-label><h2>Concepts</h2></ion-label>
           </ion-item>
