--- a/apps/app-k-maps/src/app/features/discourse/discourse-concepts/discourse-concepts.page.html
+++ b/apps/app-k-maps/src/app/features/discourse/discourse-concepts/discourse-concepts.page.html
@@ -14,7 +14,7 @@
 
   <div class="ion-padding">
     <ion-searchbar
-      placeholder="Search concepts..."
+      placeholder="Search wv_concepts..."
       [value]="query"
       (ionInput)="onSearch($event)"
     ></ion-searchbar>
