--- a/apps/app-k-maps/src/app/features/discourse/discourse-relation-detail/discourse-relation-detail.page.html
+++ b/apps/app-k-maps/src/app/features/discourse/discourse-relation-detail/discourse-relation-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/discourse/concepts"></ion-back-button>
+      <ion-back-button defaultHref="/discourse/wv_concepts"></ion-back-button>
     </ion-buttons>
     <ion-title>Relation to Qur'an</ion-title>
   </ion-toolbar>
