--- a/apps/k-maps/src/app/features/discourse/discourse-relation-detail/discourse-relation-detail.component.html
+++ b/apps/k-maps/src/app/features/discourse/discourse-relation-detail/discourse-relation-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="relation as r" class="card relation-card">
   <div class="card-body">
-    <a class="btn btn-sm btn-outline-secondary mb-3 back-button" routerLink="/discourse/concepts">Back</a>
+    <a class="btn btn-sm btn-outline-secondary mb-3 back-button" routerLink="/discourse/wv_concepts">Back</a>
 
     <div class="mb-3 header-block">
       <h5 class="mb-1">Relation to Qur'an</h5>
